share controller openapi and tests (#31)
