# src/main/resources/openapi.yaml
@@ -180,6 +180,193 @@ paths:
                 type: string
                 example: "Unexpected error encountered while getting user prescriptions"
 
+  /share/request/{ownerId}:
+    post:
+      operationId: requestAccess
+      summary: Request access to another user's prescriptions
+      parameters:
+        - name: ownerId
+          in: path
+          required: true
+          schema:
+            $ref: "#/components/schemas/UserId"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ShareRequest"
+      responses:
+        "201":
+          description: Share request created
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/SharedPermission"
+        "400":
+          description: Bad request
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: "Cannot create shared permission with self"
+                description: "Bad Request returned when owner raises request to his own prescriptions."
+
+        "404":
+          description: User not found
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: "User not found with ID : {id}"
+        "500":
+          description: Internal server error
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: "Internal Server Error"
+
+  /share/{requestId}/accept:
+    post:
+      operationId: acceptRequest
+      summary: Accepts a sharing request
+      parameters:
+        - name: requestId
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Request accepted, success
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/SharedPermission"
+        "400":
+          description: Bad Request
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: "Only Pending Requests can be accepted or denied"
+        "403":
+          description: Not authorized
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: "Not Authorized to accept or deny this request"
+        "404":
+          description: Request not found
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: "Request not found with id : {requestId}"
+        "500":
+          description: Internal server error
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: "Internal Server Error."
+
+  /share/{requestId}/deny:
+    post:
+      operationId: denyRequest
+      summary: Deny a share request
+      parameters:
+        - name: requestId
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Request denied, success
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/SharedPermission"
+        "400":
+          description: Bad Request
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: "Only Pending Requests can be accepted or denied"
+        "403":
+          description: Not authorized
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: "Not Authorized to accept or deny this request"
+        "404":
+          description: Request not found
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: "Request not found with id : {requestId}"
+        "500":
+          description: Internal server error
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: "Internal Server Error"
+
+  /share/{requestId}/revoke:
+    post:
+      operationId: revokeAccess
+      summary: Revoke an accepted sharing permission
+      parameters:
+        - name: requestId
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Revoked Access, success
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: "Access revoked successfully"
+        "400":
+          description: Bad Request
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: "Can only revoke already accepted shared permissions"
+        "403":
+          description: Not authorized
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: "Not Authorized to revoke this request"
+        "404":
+          description: Request not found
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: "Request not found with id : {requestId}"
+        "500":
+          description: Internal server error
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: "Internal Server Error"
+
+
 components:
   schemas:
     # User Attributes
@@ -289,6 +476,25 @@ components:
         isActive:
           $ref: "#/components/schemas/PrescriptionIsActive"
 
+    SharedPermission:
+      type: object
+      properties:
+        id:
+          type: string
+          example: "27b8d3b6-f101-478e-a9b5-d8d61d18e76e"
+        owner:
+          $ref: "#/components/schemas/User"
+        requester:
+          $ref: "#/components/schemas/User"
+        status:
+          type: integer
+          description: "Sharing request status 0 -> Pending, 1 -> Accepted, 2->Denied"
+          example: 0
+        permissionType:
+          type: integer
+          description: "Permission Type 0->View, 1->Edit"
+          example: 0
+
     # Request Objects
     RegisterUserRequest:
       type: object
@@ -346,6 +552,17 @@ components:
         - startDate
         - isActive
 
+    ShareRequest:
+      type: object
+      properties:
+        permissionType:
+          type: integer
+          description: "Permission Type, 0->View, 1->Edit"
+          example: 0
+      required:
+        - permissionType
+
+
   responses:
     UserDoesNotExist:
       description: Provided userId does not exist
@@ -362,3 +579,7 @@ components:
           schema:
             type: string
             example: "Provided medicationId does not exist"
+
+
+
+
